Fix: Add imgWrap in mypage, disabled btn in chat

--- a/client/src/styles/mypage.module.css
+++ b/client/src/styles/mypage.module.css
@@ -300,10 +300,14 @@
   font-size: 14px; 
   color: #6A6A6A;
 }
-.boardImg { 
-  width: 80px; 
+.boardImgWrap{
   margin-right: 15px; 
-  border-radius: 5px; 
+  width: 80px; height: 80px;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.boardImg { 
+  width: 100%; height: 100%;
   object-fit: cover; 
 }
 .boardInfo {}
